[package]
name = "tdbkv"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "s"
panic = "abort"
strip = "symbols"
lto = "fat"
codegen-units=1
debug-assertions = true
overflow-checks = true

[dependencies]
chrono = "0.4.23"
log = "0.4"
log4rs = { version="1", features=["gzip"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = { version="1.0.108" }
json = "0.12"
reqwest ={ version="0.11.12"  , features = ["blocking", "json"]}
urlencoding = "2.1.2"
byte-unit = "4.0.17"
tera = "1.19.1"
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
num_cpus = "1.16.0"
xxhash-rust ={ version = "0.8.11" , features = ["xxh3", "const_xxh3"]}
